# Friendly-popup

./: CMakeCache.txt  CMakeLists.txt  LICENSE.txt  README.md  SweetPopups.sln  SweetPopups.vcxproj
resources/: messages.txt
src/: main.cpp
src/config/: Config.h  Messages.cpp  Messages.h
src/core/: Application.cpp  Application.h  PopupManager.cpp  PopupManager.h
src/input/: KeyboardHook.cpp  KeyboardHook.h
src/ui/: PopupWindow.cpp  PopupWindow.h
